Fixed date problem / fixed page break on print

--- a/ClientApp/src/app/Components/app.component.html
+++ b/ClientApp/src/app/Components/app.component.html
@@ -1,4 +1,6 @@
 <body>
-    <router-outlet></router-outlet>
+    <div style="margin-bottom: 80px;">
+        <router-outlet></router-outlet>
+    </div>
     <app-menu></app-menu>
 </body>
