--- a/ClientApp/src/app/Components/home/home.component.html
+++ b/ClientApp/src/app/Components/home/home.component.html
@@ -8,7 +8,7 @@
                     </button>
                     <mat-form-field style="display: none;" appearance="fill">
                         <mat-label>Choose a date</mat-label>
-                        <input matInput (dateChange)="changeDate($event.value)" [matDatepicker]="picker">
+                        <input matInput (dateChange)="changeDate($event.value)" [(ngModel)]="dailyTasks.date" [matDatepicker]="picker">
                         <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                         <mat-datepicker touchUi #picker></mat-datepicker>
                     </mat-form-field>
@@ -51,7 +51,7 @@
                                 <td colspan="100%" class="text-center">No Tasks Yet</td>
                             </tr>
                             <tr>
-                                <td colspan="100%" class="text-right font-weight-bold">{{currentDate}}</td>
+                                <td colspan="100%" class="text-right font-weight-bold">{{dailyTasks.date | date: 'dd/MM/yyyy'}}</td>
                             </tr>
                         </tbody>
                     </table>
